--- a/Css/style.css
+++ b/Css/style.css
@@ -1,2 +1,10 @@
+.mainhead{
+    margin-left: 450px;
+    margin-top: 80px;
+    margin-bottom: 60px;
+}
+.mainbutton{
+    margin-left: 650px;
+    margin-top: 80px;
 
 }
