--- a/Css/style.css
+++ b/Css/style.css
@@ -16,3 +16,10 @@
 .cover-img-3{
     height: 100vh;
 }
+.accordion-style{
+        text-align: center;
+        width: 872px;
+        height: 710px;
+        margin-left: 300px;
+        
+}
